Fix - loading spinner not showing up

--- a/styles/output.css
+++ b/styles/output.css
@@ -740,6 +740,14 @@ video {
   left: 2.5rem;
 }
 
+.left-20{
+  left: 5rem;
+}
+
+.left-32{
+  left: 8rem;
+}
+
 .z-0{
   z-index: 0;
 }
@@ -1084,6 +1092,38 @@ video {
   max-width: 26px;
 }
 
+.max-w-\[150px\]{
+  max-width: 150px;
+}
+
+.max-w-\[2770px\]{
+  max-width: 2770px;
+}
+
+.max-w-\[277px\]{
+  max-width: 277px;
+}
+
+.max-w-\[280px\]{
+  max-width: 280px;
+}
+
+.max-w-\[180px\]{
+  max-width: 180px;
+}
+
+.max-w-\[300px\]{
+  max-width: 300px;
+}
+
+.max-w-\[170px\]{
+  max-width: 170px;
+}
+
+.max-w-\[212px\]{
+  max-width: 212px;
+}
+
 @keyframes spin{
   to{
     transform: rotate(360deg);
@@ -1176,6 +1216,10 @@ video {
 
 .gap-5{
   gap: 1.25rem;
+}
+
+.gap-2{
+  gap: 0.5rem;
 }
 
 .divide-y > :not([hidden]) ~ :not([hidden]){
@@ -1421,8 +1465,17 @@ video {
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
+.bg-center{
+  background-position: center;
+}
+
 .fill-blue-500{
   fill: #3b82f6;
+}
+
+.object-contain{
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 
 .object-cover{
@@ -1816,9 +1869,49 @@ video {
   border-radius: 0.75rem;
 }
 
+.group:hover .group-hover\:bg-black\/60{
+  background-color: rgb(0 0 0 / 0.6);
+}
+
+.group:hover .group-hover\:bg-black\/70{
+  background-color: rgb(0 0 0 / 0.7);
+}
+
+.group:hover .group-hover\:bg-black\/80{
+  background-color: rgb(0 0 0 / 0.8);
+}
+
 .group:hover .group-hover\:text-blue-400{
   --tw-text-opacity: 1;
   color: rgb(96 165 250 / var(--tw-text-opacity));
+}
+
+.group:hover .group-hover\:text-blue-400\/80{
+  color: rgb(96 165 250 / 0.8);
+}
+
+.group:hover .group-hover\:text-blue-300\/80{
+  color: rgb(147 197 253 / 0.8);
+}
+
+.group:hover .group-hover\:text-white\/80{
+  color: rgb(255 255 255 / 0.8);
+}
+
+.group:hover .group-hover\:text-white\/90{
+  color: rgb(255 255 255 / 0.9);
+}
+
+.group:hover .group-hover\:shadow-2xl{
+  --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
+  --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.group:hover .group-hover\:shadow-xl{
+  --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 @media (prefers-color-scheme: dark){
